--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rich-markdown-editor",
+  "name": "markdown-editor",
   "description": "A rich text editor with Markdown shortcuts built on Slate",
   "version": "7.0.0-2",
   "main": "lib/index.js",
@@ -31,7 +31,7 @@
     "slate-collapse-on-escape": "^0.6.1",
     "slate-edit-code": "^0.15.5",
     "slate-edit-list": "^0.11.3",
-    "slate-md-serializer": "^5.2.2",
+    "slate-markdown-serializer": "^0.1.5",
     "slate-paste-linkify": "^0.5.1",
     "slate-plain-serializer": "0.5.4",
     "slate-prism": "^0.5.0",
