--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "markdown-editor",
+  "name": "@scottge/markdown-editor",
   "description": "A rich markdown editor built on Slate",
-  "version": "7.0.0-2",
+  "version": "1.0.0",
   "main": "lib/index.js",
   "license": "BSD-3-Clause",
   "scripts": {
@@ -12,6 +12,7 @@
     "prepublish": "yarn build"
   },
   "dependencies": {
+    "@scottge/slate-markdown-serializer": "^1.0.1",
     "@tommoor/slate-drop-or-paste-images": "^0.8.1",
     "babel-plugin-transform-async-to-generator": "^6.24.1",
     "babel-plugin-transform-runtime": "^6.23.0",
@@ -31,7 +32,6 @@
     "slate-collapse-on-escape": "^0.6.1",
     "slate-edit-code": "^0.15.5",
     "slate-edit-list": "^0.11.3",
-    "slate-markdown-serializer": "https://github.com/scottge/slate-markdown-serializer#master",
     "slate-paste-linkify": "^0.5.1",
     "slate-plain-serializer": "0.5.4",
     "slate-prism": "^0.5.0",
