--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@scottge/markdown-editor",
   "description": "A rich markdown editor built on Slate",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "main": "lib/index.js",
   "license": "BSD-3-Clause",
   "scripts": {
@@ -9,10 +9,10 @@
     "lint": "yarn eslint src",
     "start": "webpack-serve --config example/webpack.config.js --content example/dist",
     "build": "babel src/ -d lib/",
-    "prepublish": "yarn build"
+    "prepare": "yarn build"
   },
   "dependencies": {
-    "@scottge/slate-markdown-serializer": "^1.0.1",
+    "@scottge/slate-markdown-serializer": "^1.0.2",
     "@tommoor/slate-drop-or-paste-images": "^0.8.1",
     "babel-plugin-transform-async-to-generator": "^6.24.1",
     "babel-plugin-transform-runtime": "^6.23.0",
